fixed some alignment bugs

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -259,7 +259,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0 1rem;
 }
 
 .his-card-two,
