--- a/styles/donation.css
+++ b/styles/donation.css
@@ -129,6 +129,8 @@
     font-weight: bold;
     font-size: 1rem;
     width: 100%;
+    outline: none;
+    border: none;
 }
 
 .no-wrap {
